@@ -439,7 +439,7 @@
             <control type="group">
                 <left>$PARAM[pad]</left>
                 <right>$PARAM[pad]</right>
-                <visible>String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,season) | String.IsEqual(ListItem.DBType,episode) | String.IsEqual(ListItem.DBType,set)</visible>
+                <visible>String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,episode) | String.IsEqual(ListItem.DBType,set)</visible>
                 <visible>!Skin.HasSetting(UseStandardLabels) | String.IsEmpty(Container.PluginName)</visible>
                 <!-- LEFT SIDE -->
                 <control type="label">
@@ -448,8 +448,7 @@
                     <label>$VAR[Label_List_Left]</label>
                 </control>
                 <control type="image">
-                    <animation effect="slide" end="-10" condition="!String.IsEqual(ListItem.DBType,episode) | String.IsEmpty(ListItem.Episode)">Conditional</animation>
-                    <animation effect="slide" end="-80" condition="[String.IsEqual(ListItem.DBType,episode) + [String.IsEmpty(ListItem.Episode)]] | [!String.IsEqual(ListItem.DBType,episode) + String.IsEmpty(ListItem.Year)]">Conditional</animation>
+                    <animation effect="slide" end="-10" condition="!String.IsEqual(ListItem.DBType,episode)">Conditional</animation>
                     <centertop>50%</centertop>
                     <left>90</left>
                     <width>32</width>
@@ -457,8 +456,7 @@
                     <texture colordiffuse="$PARAM[fgcolor]_90">$VAR[Image_Overlay_List]</texture>
                 </control>                
                 <control type="label">
-                    <animation effect="slide" end="-10" condition="!String.IsEqual(ListItem.DBType,episode) | String.IsEmpty(ListItem.Episode)">Conditional</animation>
-                    <animation effect="slide" end="-80" condition="[String.IsEqual(ListItem.DBType,episode) + [String.IsEmpty(ListItem.Episode)]] | [!String.IsEqual(ListItem.DBType,episode) + String.IsEmpty(ListItem.Year)]">Conditional</animation>
+                    <animation effect="slide" end="-10" condition="!String.IsEqual(ListItem.DBType,episode)">Conditional</animation>
                     <left>142</left>
                     <font>font_small_bold</font>
                     <textcolor>$PARAM[fgcolor]_100</textcolor>
@@ -513,7 +511,7 @@
             <control type="group">
                 <left>$PARAM[pad]</left>
                 <right>$PARAM[pad]</right>
-                <visible>![String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,season) | String.IsEqual(ListItem.DBType,episode) | String.IsEqual(ListItem.DBType,set) | [String.IsEqual(ListItem.DBType,song) + !Skin.HasSetting(UseTrackNamingTemplate)]] | [Skin.HasSetting(UseStandardLabels) + !String.IsEmpty(Container.PluginName)]</visible>
+                <visible>![String.IsEqual(ListItem.DBType,movie) | String.IsEqual(ListItem.DBType,tvshow) | String.IsEqual(ListItem.DBType,episode) | String.IsEqual(ListItem.DBType,set) | [String.IsEqual(ListItem.DBType,song) + !Skin.HasSetting(UseTrackNamingTemplate)]] | [Skin.HasSetting(UseStandardLabels) + !String.IsEmpty(Container.PluginName)]</visible>
                 <control type="image">
                     <visible>!String.IsEmpty(ListItem.Overlay)</visible>
                     <centertop>50%</centertop>
